--- a/content/css/main.css
+++ b/content/css/main.css
@@ -143,8 +143,7 @@ form :-moz-placeholder {
         transition: 258ms all easy-in-out; }
 
 @media screen and (min-width: 1440px) {
-  .tweets .tweet {
-    margin: 1%; } }
+  .tweets .tweet {} }
 
 .sidenav {
   height: 100%;
@@ -250,3 +249,73 @@ form :-moz-placeholder {
   width: 6px;
   border-radius: 50%;
   background: #fff; }
+
+  .template {}
+  .template .template_box {
+      position: relative;
+      background-color: #EFEFEF;
+      min-height: 300px;
+      width: calc(33.33% - 30px);
+      float: left;
+      margin: 15px;
+  }
+  .template .template_image {
+      position: absolute;
+      background-color: #DDD;
+      height: 70px;
+      width: 70px;
+      margin: 15px;
+  }
+  .template .template_text {
+      position: absolute;
+      background-color: #DDD;
+      height: 10px;
+      min-width: 100px;
+      margin: 3px 0;
+  }
+  /*USERNAME*/
+  .template_text:nth-child(2) {
+   left: 100px;
+   top: 30px;
+   width: calc(40% - 115px);
+   min-width: 85px;
+}
+  .template_text:nth-child(3) {
+   left: 100px;
+   top: 54px;
+   width: calc(60% - 115px);
+   min-width: 85px;
+}
+  /*CONTENT*/
+.template_text:nth-child(4) {
+    left: 15px;
+    top: 150px;
+    width: calc(70% - 30px);
+}
+.template_text:nth-child(5) {
+    left: 15px;
+    top: calc(150px + 24px);
+    width: calc(80% - 30px);
+}
+.template_text:nth-child(6) {
+    left: 15px;
+    top: calc(150px + 24px + 24px);
+    width: calc(50% - 30px);
+}
+
+.template_text,
+.template_image {
+    -webkit-animation: animation 2s infinite;
+    animation: animation 2s infinite;
+}
+
+@keyframes animation {
+    0% { background-color: #DDD; }
+    50% { background-color: #CCC; }
+    99% { background-color: #DDD; }
+}
+@-webkit-keyframes animation {
+    0% { background-color: #DDD; }
+    50% { background-color: #CCC; }
+    99% { background-color: #DDD; }
+}
